--- a/milestone_4/Milestone 4.Rmd
+++ b/milestone_4/Milestone 4.Rmd
@@ -17,7 +17,7 @@ medicare_modified <- read_csv('medicare_modified.csv')
 mortality_rate <- read_csv('mortality_rate.csv')
 
 str(medicare_modified)
-str(mortality_modified)
+str(mortality_rate)
 
 ```
 
